test/CheckError/Struct/OpaqueStructSizeOf.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

struct OpaqueStruct;

size_t f() {
	// CHECK: .loci:8:9: error: cannot find static method '__sizeof' for type 'OpaqueStruct'
	return sizeof(OpaqueStruct);
}

// CHECK: 2 errors generated.
